# ecs_shell

./: .gitignore  README.md  aws_functions.py  ecs_shell.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/ecs_shell/: ecs_shell.py
