[tool.poetry]
name = "ecs-shell"
version = "0.1.0"
description = "Menu-driven script for running shell on AWS ECS containers using the AWS ECS Exec for debugging tooling. Scripts enumerates ECS clusters, services, tasks and containers and then presents an easy-to-use menu to select the cluster --> service --> container to open an interactive shell on."
authors = ["Will Deane"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
boto3 = ">=1.34.39"
simple-term-menu = ">=1.6.4"
botocore = ">=1.34.39"
jmespath = ">=1.0.1"
python-dateutil = ">=2.8.2"
s3transfer = ">=0.10.0"
six = ">=1.16.0"
urllib3 = ">=2.0.7"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
